--- a/index.html
+++ b/index.html
@@ -30,43 +30,53 @@
 		<div class="scroll-wrapper" id="scrollWrapper">
 			<!-- 카드 섹션 -->
 			<section class="card-section">
-				<div class="content content--sticky content--card bg-1" data-index="0">
-					<!-- <img class="content__img content__img--small" src="img/11.png" /> -->
-					<!-- <h2 class="content__title"><i>신한 통합 금융 앱,</i>신한 슈퍼 SOL</h2> -->
-					<!-- <p class="content__text text-meta">The algorithm's workings are shrouded in complexity.</p> -->
-				</div>
+				<a href="#">
+					<div class="content content--sticky content--card bg-1" data-index="0">
+						<!-- <img class="content__img content__img--small" src="img/11.png" /> -->
+						<!-- <h2 class="content__title"><i>신한 통합 금융 앱,</i>신한 슈퍼 SOL</h2> -->
+						<!-- <p class="content__text text-meta">The algorithm's workings are shrouded in complexity.</p> -->
+					</div>
+				</a>
 			</section>
 
 			<section class="card-section">
-				<div class="content content--sticky content--card bg-2" data-index="1">
-					<img class="content__img content__img--small" src="img/12.png" />
-					<h2 class="content__title"><i>Samsung</i>Microfiber Filter</h2>
-					<p class="content__text text-meta">Enshrining the principles of conformity and reinforcing the status quo.</p>
-				</div>
+				<a href="#">
+					<div class="content content--sticky content--card bg-2" data-index="1">
+						<img class="content__img content__img--small" src="img/12.png" />
+						<h2 class="content__title"><i>Samsung</i>Microfiber Filter</h2>
+						<p class="content__text text-meta">Enshrining the principles of conformity and reinforcing the status quo.</p>
+					</div>
+				</a>
 			</section>
 
 			<section class="card-section">
-				<div class="content content--sticky content--card bg-3" data-index="2">
-					<!-- <img class="content__img content__img--small" src="img/9.png" />
-					<h2 class="content__title"><i>우아한형제들</i>채용 사이트 디자인</h2>
-					<p class="content__text text-meta">The elusive entities, lacking human form, operate in the shadows.</p> -->
-				</div>
+				<a href="#">
+					<div class="content content--sticky content--card bg-3" data-index="2">
+						<!-- <img class="content__img content__img--small" src="img/9.png" />
+						<h2 class="content__title"><i>우아한형제들</i>채용 사이트 디자인</h2>
+						<p class="content__text text-meta">The elusive entities, lacking human form, operate in the shadows.</p> -->
+					</div>
+				</a>
 			</section>
 
 			<section class="card-section">
-				<div class="content content--sticky content--card bg-4" data-index="3">
-					<!-- <img class="content__img content__img--small" src="img/8.png" />
-					<h2 class="content__title"><i>세차,주유를 위한</i>SK에너지 Muffin</h2>
-					<p class="content__text text-meta">This overlooked realm, a consequence of algorithmic judgments.</p> -->
-				</div>
+				<a href="#">
+					<div class="content content--sticky content--card bg-4" data-index="3">
+						<!-- <img class="content__img content__img--small" src="img/8.png" />
+						<h2 class="content__title"><i>세차,주유를 위한</i>SK에너지 Muffin</h2>
+						<p class="content__text text-meta">This overlooked realm, a consequence of algorithmic judgments.</p> -->
+					</div>
+				</a>
 			</section>
 
 			<section class="card-section">
-				<div class="content content--sticky content--card bg-5" data-index="4">
-					<!-- <img class="content__img content__img--small" src="img/7.png" /> -->
-					<!-- <h2 class="content__title"><i>신세계 뷰티 놀이터</i>Chicor</h2> -->
-					<!-- <p class="content__text text-meta">The collective story sculpted by the architects.</p> -->
-				</div>
+				<a href="#">
+					<div class="content content--sticky content--card bg-5" data-index="4">
+						<!-- <img class="content__img content__img--small" src="img/7.png" /> -->
+						<!-- <h2 class="content__title"><i>신세계 뷰티 놀이터</i>Chicor</h2> -->
+						<!-- <p class="content__text text-meta">The collective story sculpted by the architects.</p> -->
+					</div>
+				</a>
 			</section>
 
 			<!-- 배경 텍스트 (카드별 하나씩만) -->
