--- a/index.html
+++ b/index.html
@@ -15,59 +15,15 @@
 		<header class="frame frame--header">
 			<h1 class="frame__title">Sans</h1>
 			<a class="frame__back" href="#">About Me</a>
-			<a class="frame__prev" href="#">Contact</a>
+			<!-- <a class="frame__prev" href="#">Contact</a> -->
 			<!-- <a class="frame__sub" href="#">Subscribe to our frontend news</a> -->
 		</header>
 
-		<nav class="project-menu-list">
-			<!-- <button class="menu-icon" aria-label="전체 메뉴">
-				<svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-					<line x1="3" y1="6" x2="21" y2="6"></line>
-					<line x1="3" y1="12" x2="21" y2="12"></line>
-					<line x1="3" y1="18" x2="21" y2="18"></line>
-				</svg>
-			</button> -->
-			<a href="#" class="project-menu-list__item" data-index="0" data-slug="super-sol">
-				<span class="menu-icon menu-icon--left">≡</span>
-				<span class="menu-text">신한 슈퍼 SOL</span>
-				<span class="menu-icon menu-icon--right">→</span>
-			</a>
-			<a href="#" class="project-menu-list__item" data-index="1" data-slug="microfiber-filter">
-				<span class="menu-icon menu-icon--left">≡</span>
-				<span class="menu-text">Samsung Microfiber Filter</span>
-				<span class="menu-icon menu-icon--right">→</span>
-			</a>
-			<a href="#" class="project-menu-list__item" data-index="2" data-slug="baemin">
-				<span class="menu-icon menu-icon--left">≡</span>
-				<span class="menu-text">우아한형제들 채용</span>
-				<span class="menu-icon menu-icon--right">→</span>
-			</a>
-			<a href="#" class="project-menu-list__item" data-index="3" data-slug="sk-muffin">
-				<span class="menu-icon menu-icon--left">≡</span>
-				<span class="menu-text">SK Muffin</span>
-				<span class="menu-icon menu-icon--right">→</span>
-			</a>
-			<a href="#" class="project-menu-list__item" data-index="4" data-slug="chicor">
-				<span class="menu-icon menu-icon--left">≡</span>
-				<span class="menu-text">Chicor</span>
-				<span class="menu-icon menu-icon--right">→</span>
-			</a>
-			<!-- <button class="detail-icon" aria-label="프로젝트 페이지로 이동">
-				<svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-					<line x1="5" y1="12" x2="19" y2="12"></line>
-					<polyline points="12 5 19 12 12 19"></polyline>
-				</svg>
-			</button> -->
-		</nav>
-		
-		<div id="project-detail" class="project-detail hidden">
-			<button id="close-detail" class="close-detail">← Back</button>
-			<div class="project-content">
-				<h2 class="project-title"></h2>
-				<p class="project-desc"></p>
-			</div>
+		<div class="project-menu-list">
+			<button class="menu-icon left-icon" id="menuToggle">☰</button>
+			<div id="currentProject" class="project-center"></div>
+			<button class="menu-icon right-icon" id="projectOpen">↗</button>
 		</div>
-		
 
 		<div class="scroll-wrapper" id="scrollWrapper">
 			<!-- 카드 섹션 -->
@@ -84,9 +40,9 @@
 			<section class="card-section">
 				<a href="#">
 					<div class="content content--sticky content--card bg-2" data-index="1">
-						<img class="content__img content__img--small" src="img/12.png" />
-						<h2 class="content__title"><i>Samsung</i>Microfiber Filter</h2>
-						<p class="content__text text-meta">Enshrining the principles of conformity and reinforcing the status quo.</p>
+						<!-- <img class="content__img content__img--small" src="img/12.png" />
+						<h2 class="content__title"><i>Samsung</i>Microfiber Filter</h2> -->
+						<!-- <p class="content__text text-meta">Enshrining the principles of conformity and reinforcing the status quo.</p> -->
 					</div>
 				</a>
 			</section>
